# cremation-coin

./: .gitignore  Cargo.toml  provide_liq.json  token_init_msg.json
contracts/burning/: Cargo.toml
contracts/burning/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  testing.rs
contracts/cremation_lock/: Cargo.toml
contracts/cremation_lock/schema/: cremation-lock.json
contracts/cremation_lock/src/: contract.rs  error.rs  msg.rs  state.rs  testing.rs
contracts/cremation_stake/: Cargo.toml
contracts/cremation_stake/schema/: cremation_stake.json
contracts/cremation_stake/src/: contract.rs  error.rs  msg.rs  state.rs  testing.rs
contracts/cremation_token/: Cargo.toml
contracts/cremation_token/schema/: cremation-token.json
contracts/cremation_token/src/: contract.rs  helper.rs  lib.rs  msg.rs  state.rs  testing.rs
contracts/lenny_burning/: Cargo.toml
contracts/lenny_burning/src/: contract.rs  error.rs  (+3 more)
contracts/lenny_token/: Cargo.toml
contracts/lenny_token/schema/: lenny-token.json
contracts/lenny_token/schema/raw/: execute.json  instantiate.json  query.json  response_to_collect_tax_address.json  response_to_tax_free_address.json
contracts/lenny_token/src/: contract.rs  lib.rs  msg.rs  state.rs  testing.rs
contracts/proxy_swap/: Cargo.toml
contracts/proxy_swap/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  testing.rs
scripts/: 00-setup-terraswap-local.sh  00-setup-terraswap.sh  01-store-all-contracts.sh  01-store-crema-contracts.sh  02-init-crema-contracts.sh  03-setup-trading.sh  04-trading.sh  05-staking.sh
(+32 files in other folders)
